# lofivid

./: .env.example  .gitignore  AGENT_PIVOT_PROMPT.md  AGENT_PIVOT_PROMPT_v2.md  AGENT_PIVOT_PROMPT_v3.md  CLAUDE.md  Dockerfile  LICENSE  MODEL_OPTIONS.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.omc/state/: idle-notif-cooldown.json
configs/: 2026-04-30_morning_cafe_30min.yaml  anime_rainy_window.yaml  demo_5min_anime.yaml  jazz_cafe_unsplash.yaml  medium_30min_anime.yaml  minimal_design_lofi.yaml  photo_cozy_cafe.yaml  smoke_30sec.yaml  smoke_30sec_suno.yaml
lofivid/: __init__.py  _ffmpeg.py  _memcap.py  cache.py  cli.py  config.py  env.py  pipeline.py  seeds.py
lofivid/compose/: __init__.py  _text.py  brand.py  ffmpeg_ops.py  hud.py  overlays.py  timeline.py  waveform.py
lofivid/ingest/: __init__.py  base.py  manual.py  pixabay.py
lofivid/music/: __init__.py  _audio_probe.py  acestep.py  base.py  library.py  mixer.py  registry.py  suno.py  tracklist.py
lofivid/presets/: __init__.py  anime.py  base.py  photo.py
lofivid/styles/: __init__.py  loader.py  schema.py
lofivid/visuals/: __init__.py  _grading.py  base.py  depthflow.py  flux_klein.py  keyframes.py  overlay_motion.py  registry.py  unsplash.py  z_image.py
scripts/: make_overlays.py  preview_brand_variants.py  preview_greenhouse_cast.py  preview_music.py  preview_overlay_motion.py  preview_themes.py  preview_workday_cafe.py
styles/: _smoke.yaml  _smoke_suno.yaml  morning_cafe.yaml
tests/: conftest.py  test_cache.py  test_compose_brand.py  test_compose_hud.py  test_compose_text.py  test_compose_waveform.py  test_config.py  test_env.py  test_font_preflight.py  test_grading.py  test_library_music.py  test_mixer.py  test_mixer_timeline.py  test_pipeline_manifest.py  test_pivot_schema.py  test_registry.py  test_run_config_rejects_style_fields.py  test_style_ref_required.py  test_styles_schema.py  test_timeline.py  test_tracklist.py
tests/ingest/: test_base.py  test_manual.py  test_pixabay.py
